--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ nav{
     justify-content: space-between;
     align-items: center;
     padding: 1.5% 4% ;
+    position: sticky;
+    top: 0;
 }
 .left-nav{
     display: flex;
@@ -109,6 +111,7 @@ main{
     gap: 10%;
     align-items: center;
     padding: 0 8%;
+    margin-top: 5%;
 }
 .box{
     width: 300px;
